[WWW-70] adds player id