@@ -5,7 +5,9 @@ import jakarta.validation.Validation;
 import jakarta.validation.Validator;
 import org.junit.jupiter.api.Test;
 
-import java.util.*;
+import java.util.List;
+import java.util.Set;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -15,7 +17,7 @@ class PropositionTest {
     void testNotNullViolation() {
         Validator validator = Validation.buildDefaultValidatorFactory().getValidator();
         
-        Proposition proposition = new Proposition(null, new ArrayList<>(Arrays.asList("Car", "Plane", "boat")));
+        Proposition proposition = new Proposition(null, "1", List.of("Car", "Plane", "boat"));
         Set<ConstraintViolation<Proposition>> violations = validator.validate(proposition);
         
         assertEquals(1, violations.size());
@@ -24,10 +26,10 @@ class PropositionTest {
     @Test
     void testNoViolation() {
         Validator validator = Validation.buildDefaultValidatorFactory().getValidator();
-
-        Proposition proposition = new Proposition(UUID.randomUUID().toString(), new ArrayList<>(Arrays.asList("Car", "Plane", "boat")));
+        
+        Proposition proposition = new Proposition(UUID.randomUUID().toString(), "1", List.of("Car", "Plane", "boat"));
         Set<ConstraintViolation<Proposition>> violations = validator.validate(proposition);
-
+        
         assertEquals(0, violations.size());
     }
 }
